# instant-ping

./: .env  .gitignore  Cargo.toml  makefile  package.json  webpack.config.js
assets/js/: main.js
assets/scss/: main.scss
migrations/2018-08-30-125910_create_dashboards/: down.sql  up.sql
src/: actors.rs  controllers.rs  main.rs  models.rs  schema.rs
templates/: index.html  main.html  support.html
web/scss/: main.scss
