[package]
name = "instant-ping"
version = "0.1.0"
authors = ["Michiel Missotten <michiel@ouistock.fr>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.8"
futures = "0.1.23"

diesel = { version = "1.0.0", features = ["mysql"] }

dotenv = "0.13"
log = "0.4.0"
env_logger = "0.5"

serde = "1.0"
serde_derive = "1.0"

openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
