[package]
name = "instant-ping"
version = "0.1.0"
authors = ["Michiel Missotten <michiel@ouistock.fr>"]
edition = "2018"

[dependencies]
actix-files = "0.1.1"
actix-web = "1.0"

askama = "0.8"
futures = "0.1.23"

diesel = { version = "1.0.0", features = ["mysql"] }

dotenv = "0.14"
log = "0.4"
env_logger = "0.6"

serde = "1.0"
serde_derive = "1.0"

openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
